<resources>
    <string name="action_settings">Settings</string>
    <string name="connexion">Connexion</string>
    <string name="login">Identifiant</string>
    <string name="pwd">Mot de passe</string>
    <string name="desc_img_deco">déconnexion</string>
    <string name="choix_zone">Choisir la zone</string>
    <string name="hello_world">Hello world!</string>
    <string name="zone">Zone  :</string>
    <string name="produit">Produit :</string>
    <string name="statut">Statut :</string>
    <string name="commande">Commande :</string>
    <string name="lblquantite">Quantité : </string>
    <string name="accueil_admin_qualite">Qualité</string>
    <string name="creer_commande">Création commande</string>
    <string name="verif_defaut">Vérification mise en rebut</string>
    <string name="num_piece">N° pièce </string>
    <string name="com_defaut">Commentaires </string>
    <string name="defaut">Défaut constaté </string>
    <string name="client">Client </string>
    <string name="produit_cmd">Produit </string>
    <string name="matiere">Matière </string>
    <string name="quantite">Quantité </string>
    <string name="param_traca">Paramètrage traçabilité </string>
    <string name="liste_commande">Liste commandes </string>
    <string name="detail_commande">Détails commande </string>
    <string name="accueil_logi">Gestion ligne de production </string>
    <string name="role">Rôle </string>
    <string name="nom_zone">Nom zone </string>
    <string name="nom_machine">Nom machine </string>
    <string name="choix_machine">Choisir la machine </string>
    <string name="btn_zone_facon">Façonnage</string>
    <string name="btn_zone_decoup">Découpage</string>
    <string name="btn_zone_peint">Peinture</string>
    <string name="btn_zone_ass">Assemblage</string>
    <string name="btn_start_pdt">Start</string>
    <string name="btn_stop_pdt">Stop</string>
    <string name="btn_next_pdt">Produit suivant</string>
    <string name="btn_rebut_pdt">Mettre au rebut</string>
    <string name="btn_change_zone">Changer de zone</string>
    <string name="btn_create_cmd">Création commande</string>
    <string name="btn_check_qualite">Vérifier mises en rebut</string>
    <string name="btn_traca">Traçabilité</string>
    <string name="btn_liste_cmd">Commandes à venir</string>
    <string name="btn_cmd_encours">Commandes en cours</string>
    <string name="btn_val_rebut">Valider rebut</string>
    <string name="btn_remise_rebut">Remettre dans le circuit</string>
    <string name="btn_val_cmd">Valider commande et paramètrer traçabilité</string>
    <string name="btn_retour_liste">Retour liste</string>
    <string name="btn_del_cmd">Supprimer commande</string>
    <string name="btn_ajout_user">Ajout utilisateur</string>
    <string name="btn_ajout_zone">Ajout zone</string>
    <string name="btn_ajout_machine">Ajout machine</string>
    <string name="btn_val">Valider</string>
    <string name="title_activity_accueil_qualite">        AccueilQualiteActivity</string>
    <string name="title_activity_creer_commande">CreerCommandeActivity</string>
    <string name="title_activity_gestion_piece">GestionPieceActivity</string>
    <string name="title_activity_choix_zone">ChoixZoneActivity</string>
    <string name="title_activity_check_rebut">CheckRebutActivity</string>
    <string name="title_activity_param_traca">ParamTracaActivity</string>
    <string name="title_activity_list_commande">ListCommandeActivity</string>
    <string name="title_activity_detail_commande">        DetailCommandeActivity</string>
    <string name="title_activity_accueil_logiciel">        AccueilLogicielActivity</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="title_activity_add_zone">AddZoneActivity</string>
    <string name="title_activity_add_machine">AddMachineActivity</string>
    <string name="app_provider_description">Provider of WindowsGesture2 to access data</string>
    <string name="app_provider_name">Provider of WindowsGesture2</string>
    <string name="common_create">Create</string>
    <string name="common_delete">Del</string>
    <string name="common_edit">Edit</string>
    <string name="dialog_delete_message">Are you sure you want to delete this item ?</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="menu_item_create">Add</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_save">Save</string>
    <string name="client_empty_list">Client list is empty !</string>
    <string name="client_error_create">Client creation error…</string>
    <string name="client_error_edit">Client edition error…</string>
    <string name="client_error_load">Client loading error…</string>
    <string name="client_label">Client</string>
    <string name="client_nom_invalid_field_error">Field Nom is invalid.</string>
    <string name="client_nom_label">Nom</string>
    <string name="client_not_found">No Client found to display…</string>
    <string name="client_progress_load_message">Client is loading…</string>
    <string name="client_progress_load_relations_message">Client related entities are loading...</string>
    <string name="client_progress_load_relations_title">Client related entities loading</string>
    <string name="client_progress_load_title">Client Loading progress</string>
    <string name="client_progress_save_message">Client is saving to database…</string>
    <string name="client_progress_save_title">Client save progress</string>
    <string name="commande_avancement_invalid_field_error">Field Avancement is invalid.</string>
    <string name="commande_avancement_label">Avancement</string>
    <string name="commande_client_dialog_title">Select client</string>
    <string name="commande_client_invalid_field_error">Field Client is invalid.</string>
    <string name="commande_client_label">Client</string>
    <string name="commande_datecreation_date_title">Select dateCreation date</string>
    <string name="commande_datecreation_invalid_field_error">Field DateCreation is invalid.</string>
    <string name="commande_datecreation_label">DateCreation</string>
    <string name="commande_datecreation_time_title">Select dateCreation time</string>
    <string name="commande_datefin_date_title">Select dateFin date</string>
    <string name="commande_datefin_invalid_field_error">Field DateFin is invalid.</string>
    <string name="commande_datefin_label">DateFin</string>
    <string name="commande_datefin_time_title">Select dateFin time</string>
    <string name="commande_datelivraison_date_title">Select dateLivraison date</string>
    <string name="commande_datelivraison_invalid_field_error">Field DateLivraison is invalid.</string>
    <string name="commande_datelivraison_label">DateLivraison</string>
    <string name="commande_datelivraison_time_title">Select dateLivraison time</string>
    <string name="commande_empty_list">Commande list is empty !</string>
    <string name="commande_error_create">Commande creation error…</string>
    <string name="commande_error_edit">Commande edition error…</string>
    <string name="commande_error_load">Commande loading error…</string>
    <string name="commande_label">Commande</string>
    <string name="commande_not_found">No Commande found to display…</string>
    <string name="commande_produits_dialog_title">Select produits</string>
    <string name="commande_produits_invalid_field_error">Field Produits is invalid.</string>
    <string name="commande_produits_label">Produits</string>
    <string name="commande_progress_load_message">Commande is loading…</string>
    <string name="commande_progress_load_relations_message">Commande related entities are loading...</string>
    <string name="commande_progress_load_relations_title">Commande related entities loading</string>
    <string name="commande_progress_load_title">Commande Loading progress</string>
    <string name="commande_progress_save_message">Commande is saving to database…</string>
    <string name="commande_progress_save_title">Commande save progress</string>
    <string name="log_dateentre_date_title">Select dateEntre date</string>
    <string name="log_dateentre_invalid_field_error">Field DateEntre is invalid.</string>
    <string name="log_dateentre_label">DateEntre</string>
    <string name="log_dateentre_time_title">Select dateEntre time</string>
    <string name="log_datesortie_date_title">Select dateSortie date</string>
    <string name="log_datesortie_invalid_field_error">Field DateSortie is invalid.</string>
    <string name="log_datesortie_label">DateSortie</string>
    <string name="log_datesortie_time_title">Select dateSortie time</string>
    <string name="log_duree_date_title">Select duree date</string>
    <string name="log_duree_invalid_field_error">Field Duree is invalid.</string>
    <string name="log_duree_label">Duree</string>
    <string name="log_duree_time_title">Select duree time</string>
    <string name="log_label">Log</string>
    <string name="log_machine_invalid_field_error">Field Machine is invalid.</string>
    <string name="log_machine_label">Machine</string>
    <string name="log_produit_invalid_field_error">Field Produit is invalid.</string>
    <string name="log_produit_label">Produit</string>
    <string name="log_user_invalid_field_error">Field User is invalid.</string>
    <string name="log_user_label">User</string>
    <string name="logtraca_dateentre_date_title">Select dateEntre date</string>
    <string name="logtraca_dateentre_invalid_field_error">Field DateEntre is invalid.</string>
    <string name="logtraca_dateentre_label">DateEntre</string>
    <string name="logtraca_dateentre_time_title">Select dateEntre time</string>
    <string name="logtraca_datesortie_date_title">Select dateSortie date</string>
    <string name="logtraca_datesortie_invalid_field_error">Field DateSortie is invalid.</string>
    <string name="logtraca_datesortie_label">DateSortie</string>
    <string name="logtraca_datesortie_time_title">Select dateSortie time</string>
    <string name="logtraca_duree_date_title">Select duree date</string>
    <string name="logtraca_duree_invalid_field_error">Field Duree is invalid.</string>
    <string name="logtraca_duree_label">Duree</string>
    <string name="logtraca_duree_time_title">Select duree time</string>
    <string name="logtraca_empty_list">LogTraca list is empty !</string>
    <string name="logtraca_error_create">LogTraca creation error…</string>
    <string name="logtraca_error_edit">LogTraca edition error…</string>
    <string name="logtraca_error_load">LogTraca loading error…</string>
    <string name="logtraca_label">LogTraca</string>
    <string name="logtraca_machine_dialog_title">Select machine</string>
    <string name="logtraca_machine_invalid_field_error">Field Machine is invalid.</string>
    <string name="logtraca_machine_label">Machine</string>
    <string name="logtraca_not_found">No LogTraca found to display…</string>
    <string name="logtraca_produit_dialog_title">Select produit</string>
    <string name="logtraca_produit_invalid_field_error">Field Produit is invalid.</string>
    <string name="logtraca_produit_label">Produit</string>
    <string name="logtraca_progress_load_message">LogTraca is loading…</string>
    <string name="logtraca_progress_load_relations_message">LogTraca related entities are loading...</string>
    <string name="logtraca_user_label">User</string>
    <string name="produit_avancement_label">Avancement</string>
    <string name="produit_commande_label">Commande</string>
    <string name="produit_etat_label">Etat</string>
    <string name="produit_materiel_label">Materiel</string>
    <string name="produit_not_found">No Produit found to display…</string>
    <string name="produit_quantite_label">Quantite</string>
    <string name="produit_type_label">Type</string>
</resources>