<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:contentDescription="@string/desc_img_deco"
        android:src="@drawable/deconnexion" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/accueil_admin_qualite"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/darkred"
        android:textSize="30sp" 
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_create_cmd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_create_cmd" />

        <Button
            android:id="@+id/btn_check_qualite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_check_qualite" />

        <Button
            android:id="@+id/btn_traca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_traca" />

        <Button
            android:id="@+id/btn_liste_cmd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_liste_cmd" />

        <Button
            android:id="@+id/btn_cmd_encours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cmd_encours" />
        
        <Button
            android:id="@+id/btn_add_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_client" />
    </LinearLayout>

</LinearLayout>