<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:contentDescription="@string/desc_img_deco"
        android:src="@drawable/deconnexion" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/accueil_logi"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/darkred"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_ajout_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ajout_user" />

        <Button
            android:id="@+id/btn_ajout_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ajout_zone" />

        <Button
            android:id="@+id/btn_ajout_machine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ajout_machine" />
    </LinearLayout>

</LinearLayout>