<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
		<RelativeLayout
			android:id="@+id/commande_data_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="10dp" >
			<TextView
				android:id="@+id/commande_client_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/commande_client_label"/>
			<TextView
				android:id="@+id/commande_client"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textIsSelectable="true"
				android:layout_below="@+id/commande_client_label" />
			<TextView
				android:id="@+id/commande_datecreation_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/commande_client"
				android:text="@string/commande_datecreation_label"/>
			<TextView
				android:id="@+id/commande_datecreation"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textIsSelectable="true"
				android:layout_below="@+id/commande_datecreation_label" />
			<TextView
				android:id="@+id/commande_datefin_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/commande_datecreation"
				android:text="@string/commande_datefin_label"/>
			<TextView
				android:id="@+id/commande_datefin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textIsSelectable="true"
				android:layout_below="@+id/commande_datefin_label" />
			<TextView
				android:id="@+id/commande_datelivraison_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/commande_datefin"
				android:text="@string/commande_datelivraison_label"/>
			<TextView
				android:id="@+id/commande_datelivraison"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textIsSelectable="true"
				android:layout_below="@+id/commande_datelivraison_label" />
			<TextView
				android:id="@+id/commande_avancement_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/commande_datelivraison"
				android:text="@string/commande_avancement_label"/>
			<TextView
				android:id="@+id/commande_avancement"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textIsSelectable="true"
				android:layout_below="@+id/commande_avancement_label" />
			<TextView
				android:id="@+id/commande_produits_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/commande_avancement"
				android:text="@string/commande_produits_label"/>
			<TextView
				android:id="@+id/commande_produits"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textIsSelectable="true"
				android:layout_below="@+id/commande_produits_label" />
		</RelativeLayout>
	</ScrollView>
	<TextView
	    android:id="@+id/commande_empty"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center"
	    android:visibility="gone"
	    android:text="@string/commande_not_found" />
</RelativeLayout>
